Bug 920302 - Use CheckPermission to check for the desktop-notification permission. r=sicking, a=koi+