dom/src/notification/Notification.cpp
@@ -325,6 +325,14 @@ Notification::Constructor(const GlobalObject& aGlobal,
   return notification.forget();
 }
 
+nsIPrincipal*
+Notification::GetPrincipal()
+{
+  nsCOMPtr<nsIScriptObjectPrincipal> sop = do_QueryInterface(GetOwner());
+  NS_ENSURE_TRUE(sop, nullptr);
+  return sop->GetPrincipal();
+}
+
 nsresult
 Notification::ShowInternal()
 {
@@ -401,7 +409,8 @@ Notification::ShowInternal()
   uniqueCookie.AppendInt(sCount++);
   return alertService->ShowAlertNotification(absoluteUrl, mTitle, mBody, true,
                                              uniqueCookie, observer, alertName,
-                                             DirectionToString(mDir), mLang);
+                                             DirectionToString(mDir), mLang,
+                                             GetPrincipal());
 }
 
 void
@@ -522,7 +531,7 @@ Notification::CloseInternal()
       nsresult rv = GetAlertName(alertName);
       NS_ENSURE_SUCCESS(rv, rv);
 
-      rv = alertService->CloseAlert(alertName);
+      rv = alertService->CloseAlert(alertName, GetPrincipal());
       NS_ENSURE_SUCCESS(rv, rv);
     }
   }
