dom/src/notification/Notification.h
@@ -10,6 +10,8 @@
 #include "nsDOMEventTargetHelper.h"
 #include "nsIObserver.h"
 
+class nsIPrincipal;
+
 namespace mozilla {
 namespace dom {
 
@@ -115,6 +117,9 @@ protected:
   bool mIsClosed;
 
   static uint32_t sCount;
+
+private:
+  nsIPrincipal* GetPrincipal();
 };
 
 } // namespace dom
